try to fix video play

--- a/pages/230302_0215.mdx
+++ b/pages/230302_0215.mdx
@@ -1,4 +1,4 @@
-# Batch convert `.doc` format files to `.docx` with VBA code
+# Batch convert .doc format files to .docx with VBA code
 
 ## Step by step
 
