last try to use play mp4

--- a/pages/230304_2057.mdx
+++ b/pages/230304_2057.mdx
@@ -37,7 +37,8 @@ document.body.appendChild(jspdf);
 
 4. When everything has done, the PDF file will be downloaded.
 
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/Download-protected-view-only-PDF-from-Google-Drive.mp4)
+<video src="/assets/230304_2057/Download-protected-view-only-PDF-from-Google-Drive.mp4" controls="controls" style="max-width: 730px;">
+</video>
 
 ## Advanced medthod
 
