--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,4 @@
-# Introduction
+# Welcome to **Fancy Notes**!
 
-Welcome to Fany Notes! This is a site for creating notes with [Nextra](https://nextra.site).
+This is a site for collecting some notes about anything you are finding. It is more than just a note-taking site. It’s a community of learners and doers who value useful notes and want to improve their skills and knowledge. Whether you’re a student, a professional, a hobbyist, or just someone who enjoys learning new things, this site is for you. Join [us](https://github.com/AREA44/fancy-notes) today and start collecting some notes about useful notes!
+Powered by [Nextra](https://nextra.site).
