--- a/pages/230517_1814.mdx
+++ b/pages/230517_1814.mdx
@@ -10,8 +10,9 @@ curl "https://api.github.com/$CNTX/$NAME/repos?page=$PAGE&per_page=100" |
   xargs -L1 git clone
 ```
 
-Set `CNTX=users` and `NAME=yourusername`, to download all your repositories.
-Set `CNTX=orgs` and `NAME=yourorgname`, to download all repositories of your organization.
+> Set `CNTX=users` and `NAME=yourusername`, to download all your repositories.
+> Set `CNTX=orgs` and `NAME=yourorgname`, to download all repositories of your organization.
+
 The maximum page-size is 100, so you have to call this several times with the right page number to get all your repositories (set PAGE to the desired page number you want to download).
 
 ![Clone all repos at once from GitHub](/assets/230517_1814/01.png)
