--- a/pages/230522_0142.mdx
+++ b/pages/230522_0142.mdx
@@ -9,6 +9,25 @@ git reflog expire --all --expire=now
 git gc --prune=now --aggressive
 ```
 
+## Clone all repos at once from GitHub
+
+On **Windows** and all **UNIX/LINUX** systems, using **Git Bash** with this script:
+
+```bash copy
+CNTX={users|orgs}; NAME={username|orgname}; PAGE=1
+curl "https://api.github.com/$CNTX/$NAME/repos?page=$PAGE&per_page=100" |
+  grep -e 'clone_url*' |
+  cut -d \" -f 4 |
+  xargs -L1 git clone
+```
+
+> Set `CNTX=users` and `NAME=yourusername`, to download all your repositories.
+
+> Set `CNTX=orgs` and `NAME=yourorgname`, to download all repositories of your organization.
+
+> The maximum page-size is 100, so you have to call this several times with the right page number to get all your repositories (set PAGE to the desired page number you want to download).
+
 ## Resources
 
 1. https://education.github.com/git-cheat-sheet-education.pdf
+2. https://stackoverflow.com/questions/19576742/how-to-clone-all-repos-at-once-from-github
