--- a/pages/230302_0215.mdx
+++ b/pages/230302_0215.mdx
@@ -1,4 +1,4 @@
-# Batch convert `.doc` format files to `.docx` with VBA code
+# Batch Convert `.doc` Format Files to `.docx` with VBA Code
 
 ## Step by step
 
