--- a/pages/230304_2057.mdx
+++ b/pages/230304_2057.mdx
@@ -1,4 +1,4 @@
-# Steps to download restricted Google Drive PDF
+# Steps to Download Restricted Google Drive PDF
 
 ## Simple medthod
 
@@ -60,4 +60,4 @@ The simple JS method works for simple PDF files, but if you wish to download lar
 ## Resources
 
 1. https://bytesbin.com/download-view-only-pdf-google-drive
-2. https://github.com/zeltox/Google-Drive-PDF-Downloader
+1. https://github.com/zeltox/Google-Drive-PDF-Downloader
