--- a/pages/230522_0142.mdx
+++ b/pages/230522_0142.mdx
@@ -1,5 +1,26 @@
 # Git - Tips & Tricks
 
+## Start a new git repository
+
+To create a new repository on the command line:
+
+```bash copy
+git init
+git add .
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/OWNER/REPOSITORY
+git push -u origin main
+```
+
+## Changing a remote repository's URL
+
+The command changes an existing remote repository URL:
+
+```bash copy
+git remote set-url origin https://github.com/OWNER/REPOSITORY
+```
+
 ## Cleanup unnecessary files and optimize the local repository
 
 The following commands can be used to reduce the size of a git repository:
@@ -14,20 +35,19 @@ git gc --prune=now --aggressive
 On **Windows** and all **UNIX/LINUX** systems, using **Git Bash** with this script:
 
 ```bash copy
-CNTX={users|orgs}; NAME={username|orgname}; PAGE=1
-curl "https://api.github.com/$CNTX/$NAME/repos?page=$PAGE&per_page=100" |
+CNTX={users|orgs}; PAGE=1
+curl "https://api.github.com/$CNTX/OWNER/repos?page=$PAGE&per_page=100" |
   grep -e 'clone_url*' |
   cut -d \" -f 4 |
   xargs -L1 git clone
 ```
 
-> Set `CNTX=users` and `NAME=yourusername`, to download all your repositories.
-
-> Set `CNTX=orgs` and `NAME=yourorgname`, to download all repositories of your organization.
+> Set `CNTX=users`, to download all your repositories or set `CNTX=orgs`, to download all repositories of your organization.
 
 > The maximum page-size is 100, so you have to call this several times with the right page number to get all your repositories (set PAGE to the desired page number you want to download).
 
 ## Resources
 
+1. https://docs.github.com/en
 1. https://education.github.com/git-cheat-sheet-education.pdf
-2. https://stackoverflow.com/questions/19576742/how-to-clone-all-repos-at-once-from-github
+1. https://stackoverflow.com/questions/19576742/how-to-clone-all-repos-at-once-from-github
