--- a/pages/230304_2057.mdx
+++ b/pages/230304_2057.mdx
@@ -11,30 +11,30 @@ Here are the simple steps to download view-only protected PDF from Google Drive 
 3. Now paste the this script in the `Developer Console` and hit `Enter`.
 
 ```js copy
-let jspdf = document.createElement('script')
+let jspdf = document.createElement('script');
 jspdf.onload = function () {
-  let pdf = new jsPDF()
-  let elements = document.getElementsByTagName('img')
+  let pdf = new jsPDF();
+  let elements = document.getElementsByTagName('img');
   for (let i in elements) {
-    let img = elements[i]
-    console.log('add img ', img)
+    let img = elements[i];
+    console.log('add img ', img);
     if (!/^blob:/.test(img.src)) {
-      console.log('invalid src')
-      continue
+      console.log('invalid src');
+      continue;
     }
-    let can = document.createElement('canvas')
-    let con = can.getContext('2d')
-    can.width = img.width
-    can.height = img.height
-    con.drawImage(img, 0, 0, img.width, img.height)
-    let imgData = can.toDataURL('image/jpeg', 1.0)
-    pdf.addImage(imgData, 'JPEG', 0, 0)
-    pdf.addPage()
+    let can = document.createElement('canvas');
+    let con = can.getContext('2d');
+    can.width = img.width;
+    can.height = img.height;
+    con.drawImage(img, 0, 0, img.width, img.height);
+    let imgData = can.toDataURL('image/jpeg', 1.0);
+    pdf.addImage(imgData, 'JPEG', 0, 0);
+    pdf.addPage();
   }
-  pdf.save('download.pdf')
-}
-jspdf.src = 'https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js'
-document.body.appendChild(jspdf)
+  pdf.save('download.pdf');
+};
+jspdf.src = 'https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js';
+document.body.appendChild(jspdf);
 ```
 
 ![Steps to download restricted Google Drive PDF](/assets/230304_2057/03.png)
