--- a/pages/230914_1034.mdx
+++ b/pages/230914_1034.mdx
@@ -7,7 +7,7 @@
 
 > Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands. `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader. `ffmpeg` is required for the audio extraction and conversion process.
 
-## Get Started
+## Getting Started
 
 To download a video from YouTube, use the following command:
 
@@ -21,6 +21,6 @@ To download an MP3 from YouTube, use the following command:
 yt-dlp --extract-audio --audio-format mp3 <YouTube video URL>
 ```
 
-> Replace <YouTube video URL> with the URL of the YouTube video you want to download the MP3 from.
+> Replace `<YouTube video URL>` with the URL of the YouTube video you want to download the MP3 from.
 
 Once the download is complete, you will find the video or MP3 file in your current directory or the default download directory set by `yt-dlp`.
