feat: use Steps built-ins

--- a/pages/230302_0215.mdx
+++ b/pages/230302_0215.mdx
@@ -1,12 +1,15 @@
+import { Steps } from 'nextra/components'
+
 # Batch Convert `.doc` Format Files to `.docx` with VBA Code
 
 ## Step by step
 
 This section is going to show you the VBA code to convert all `.doc` format documents in a specified folder to `.docx` documents at once. Please do as follows.
 
-1. Please collect all `.doc` format documents you will convert to `.docx` in a specified folder.
-2. Open Word and press the `Alt` + `F11` key to open the Microsoft Visual Basic for Applications window.
-3. In the window, click `Insert` > `Module`. Then copy below VBA code into the Module window.
+<Steps>
+### Please collect all `.doc` format documents you will convert to `.docx` in a specified folder.
+### Open Word and press the `Alt` + `F11` key to open the Microsoft Visual Basic for Applications window.
+### In the window, click `Insert` > `Module`. Then copy below VBA code into the Module window.
 
 ```bat copy
 Sub ConvertDocToDocx()
@@ -35,8 +38,9 @@ End Sub
 
     ![Batch convert .doc format files to .docx with VBA code](/assets/230302_0215/01.png)
 
-4. Press the `F5` key to run the code. In the opening Browse window, select the folder contains the `.doc` format documents and click OK. Then all `.doc` format documents are converted to `.docx` documents immediately.
+### Press the `F5` key to run the code. In the opening Browse window, select the folder contains the `.doc` format documents and click OK. Then all `.doc` format documents are converted to `.docx` documents immediately.
    ![Batch convert .doc format files to .docx with VBA code](/assets/230302_0215/02.png)
+<Steps>
 
 ## Resources
 
