--- a/pages/230914_1034.mdx
+++ b/pages/230914_1034.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components'
+
 # Download Videos and MP3s from YouTube
 
 ## Requerements
@@ -5,7 +7,9 @@
 - [yt-dlp](https://github.com/yt-dlp/yt-dlp)
 - [ffmpeg](https://ffmpeg.org)
 
-> Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands. `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader. `ffmpeg` is required for the audio extraction and conversion process.
+<Callout type="info">
+  Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands. `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader. `ffmpeg` is required for the audio extraction and conversion process.
+</Callout>
 
 ## Getting Started
 
@@ -21,6 +25,8 @@ To download an MP3 from YouTube, use the following command:
 yt-dlp --extract-audio --audio-format mp3 <YouTube video URL>
 ```
 
-> Replace `<YouTube video URL>` with the URL of the YouTube video you want to download the MP3 from.
+<Callout>
+  Replace `<YouTube video URL>` with the URL of the YouTube video you want to download the MP3 from.
+</Callout>
 
 Once the download is complete, you will find the video or MP3 file in your current directory or the default download directory set by `yt-dlp`.
