improve: step by step

--- a/pages/230914_1034.mdx
+++ b/pages/230914_1034.mdx
@@ -11,13 +11,15 @@ import { Callout } from 'nextra/components'
   Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands. `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader. `ffmpeg` is required for the audio extraction and conversion process.
 </Callout>
 
-## Getting Started
+## Download a video from YouTube
 
 To download a video from YouTube, use the following command:
 
 ```bash
 yt-dlp <YouTube video URL>
 ```
+
+## Download an MP3 from YouTube
 
 To download an MP3 from YouTube, use the following command:
 
