--- a/pages/230304_2057.mdx
+++ b/pages/230304_2057.mdx
@@ -8,19 +8,13 @@ import { Steps } from 'nextra/components'
 Here are the simple steps to download view-only protected PDF from Google Drive using Chrome browser:
 
 <Steps>
-### Step 1
-
-Open the PDF file on your Chrome Browser. Let the file load completely and scroll to the bottom of the page.
+### Open the PDF file on your Chrome Browser. Let the file load completely and scroll to the bottom of the page.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/01.png)
 
-### Step 2
-
-Now open `Developer Console` by pressing `Ctrl`+ `Shift` + `C` (`F12`) for Windows or `Cmd` + `Shift` + `C` for Mac. Then click on `Console` tab.
+### Now open `Developer Console` by pressing `Ctrl`+ `Shift` + `C` (`F12`) for Windows or `Cmd` + `Shift` + `C` for Mac. Then click on `Console` tab.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/02.png)
 
-### Step 3
-
-Now paste the this script in the `Developer Console` and hit `Enter`.
+### Now paste the this script in the `Developer Console` and hit `Enter`.
 
 ```js copy
 let jspdf = document.createElement('script');
@@ -51,9 +45,7 @@ document.body.appendChild(jspdf);
 
 ![Steps to download restricted Google Drive PDF](/assets/230304_2057/03.png)
 
-### Step 4
-
-When everything has done, the PDF file will be downloaded.
+### When everything has done, the PDF file will be downloaded.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/04.png)
 </Steps>
 
@@ -62,25 +54,17 @@ When everything has done, the PDF file will be downloaded.
 The simple JS method works for simple PDF files, but if you wish to download large PDF files with complex orientation in high quality, then the simple JS code may not work that great, here you can try this advanced trick to save the download protected Google Drive PDF.
 
 <Steps>
-### Step 1
-
-Download [Google Drive PDF Downloader](https://github.com/zeltox/Google-Drive-PDF-Downloader/archive/refs/heads/master.zip) file and extract the content. Open `Method_1_Script.js`. Then copy the script into `Developer Console` and press `Enter`.
+### Download [Google Drive PDF Downloader](https://github.com/zeltox/Google-Drive-PDF-Downloader/archive/refs/heads/master.zip) file and extract the content. Open `Method_1_Script.js`. Then copy the script into `Developer Console` and press `Enter`.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/05.png)
 
-### Step 2
-
-After few seconds the browser will prompt you to save a file with extension `*.PDF_DataFile"`. Save this file and copy it into the `Input` directory which is inside the folder you downloaded earlier.
+### After few seconds the browser will prompt you to save a file with extension `*.PDF_DataFile"`. Save this file and copy it into the `Input` directory which is inside the folder you downloaded earlier.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/06.png)
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/07.png)
 
-### Step 3
-
-If you are using Windows then navigate to `Windows` folder and double click on `GeneratePDF.cmd`. If you are using Linux then navigate to `Linux` folder and execute `GeneratePDF`.
+### If you are using Windows then navigate to `Windows` folder and double click on `GeneratePDF.cmd`. If you are using Linux then navigate to `Linux` folder and execute `GeneratePDF`.
    ![Steps to download restricted Google Drive PDF](/assets/230304_2057/08.png)
 
-### Step 4
-
-A successful message will be shown once the whole process completes. Navigate to the `Output` folder and enjoy.
+### A successful message will be shown once the whole process completes. Navigate to the `Output` folder and enjoy.
 </Steps>
 
 <Callout type="info" emoji="💡">
