--- a/pages/230914_1034.mdx
+++ b/pages/230914_1034.mdx
@@ -2,13 +2,15 @@ import { Callout } from 'nextra/components'
 
 # Download Videos and MP3s from YouTube
 
-## Requerements
+## Requirements
 
 - [yt-dlp](https://github.com/yt-dlp/yt-dlp)
 - [ffmpeg](https://ffmpeg.org)
 
 <Callout type="info">
-  Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands. `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader. `ffmpeg` is required for the audio extraction and conversion process.
+  Make sure you have `yt-dlp` and `ffmpeg` installed before executing the commands.
+  `yt-dlp` is a powerful command-line tool that offers additional features compared to the traditional YouTube downloader.
+  `ffmpeg` is required for the audio extraction and conversion process.
 </Callout>
 
 ## Download a video from YouTube
