--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,5 @@
-# Welcome to **Fancy Notes**!
+# Welcome to Fancy Notes!
 
 This is a site collecting useful notes about anything you are finding. It is more than just a note-taking site. It’s a community of learners and doers who value useful notes and want to improve their skills and knowledge. Whether you’re a student, a professional, a hobbyist, or just someone who enjoys learning new things, this site is for you. Join [us](https://github.com/AREA44/fancy-notes) today and start collecting some notes about useful notes!
 
-This sites was powered by [Nextra](https://nextra.site).
+Fancy Notes is built using [Nextra](https://nextra.site) - a simple, powerful and flexible site generation framework with everything you love from Next.js
