--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,4 +1,4 @@
-import '../styles/globals.css'
+import '../style.css'
 
 export default function App({ Component, pageProps }) {
   return <Component {...pageProps} />;
